--- a/amplify.yml
+++ b/amplify.yml
@@ -7,13 +7,9 @@ backend:
         - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
 frontend:
   phases:
-    preBuild:
-      commands:
-        - npm ci --cache .npm --prefer-offline
     build:
       commands:
-        - npx ampx generate outputs --branch $AWS_BRANCH --app-id $AWS_APP_ID
-        - echo "USER_PROFILE_ID=$USER_PROFILE_ID" >> .env.production
+        - echo "USER_PROFILE_ID=$USER_PROFILE_ID" >> .env
         - npm run build
   artifacts:
     baseDirectory: .next
